--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,14 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <%= render "shared/navbar" %>
-
+    <header class="hero-section text-white text-center">
+      <div class="container">
+        <h1 class="display-4">Bienvenue sur Secret Aïd 🌙</h1>
+        <p class="lead">Organisez facilement un tirage au sort HALAL pour votre échange de cadeaux !</p>
+      </div>
+    </header>
     <main class="flex-grow-1 d-flex">
+      
       <div class="container my-auto">
         <%= yield %>
       </div>
