--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -1,9 +1,11 @@
-<h2>📋 Liste des Groupes</h2>
+<div class="container">
+  <h2>📋 Liste des Groupes</h2>
 
-<ul>
-  <% @groups.each do |group| %>
-    <li>
-      <%= link_to group.name, admin_group_path(group) %>
-    </li>
-  <% end %>
-</ul>
+  <ul>
+    <% @groups.each do |group| %>
+      <li>
+        <%= link_to group.name, admin_group_path(group) %>
+      </li>
+    <% end %>
+  </ul>
+</div>
