--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,38 +1,48 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Modifier mon profil</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), method: :patch) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :name, label: "Prénom Nom", required: true, autofocus: true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :avatar, as: :file %>
-
+    <%= f.input :email, label: "adresse e-mail", required: true, input_html: { autocomplete: "email" } %>
 
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
+                label: "mot de passe",
+                hint: "Laissez vide si vous ne souhaitez pas le changer", 
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
+
+    <%= f.input :password_confirmation, 
+                label: "Confirmer le mot de passe",
+                
                 input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :avatar, as: :file, required: false %>
+
+    <!-- Ajout du champ gender avec un select -->
+    <small>Homme ou Femme ?</small>
+
+    <%= f.input :gender, label: false, as: :select, collection: [["Homme", "H"], ["Femme", "F"]], required: true %>
+
+    <!-- Ajout du champ only_same_gender avec un select -->
+    <small>Tirer au sort uniquement le même genre que moi ?</small>
+    <%= f.input :only_same_gender, label: false, as: :select, collection: [["Oui", true], ["Non", false]], required: true %>
+
+    <!-- Ajout du champ relation_type avec un select -->
+    <small>Certaines personnes peuvent être mal à l'aise concernant le fait d'offrir à une personne par alliance.</small><br>
+    <small><strong>Familiale :</strong> Tirage au sort uniquement dans la famille directe.</small><br>
+    <small><strong>Alliance :</strong> Exemple : le mari de ma sœur ou la femme de mon frère.</small><br>
+    <%= f.input :relation_type, label: false, as: :select, collection: [["Familiale", 0], ["Alliance", 1]], required: true %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
+                label: "Mot de passe Actuel",
+                
+                hint: "Obligatoire pour valider les modifications", 
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Mettre à jour", class: "btn btn-primary mb-2" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
