--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,39 @@
-<h2>Sign up</h2>
+<h2>Créer un compte</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :name, required: true, autofocus: true %>
+
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "email" } %>
+
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
 
-    <%= f.input :avatar, as: :file %>
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :avatar, as: :file, required: true %>
+
+    <!-- Ajout du champ gender avec un select -->
+    <%= f.input :gender, as: :select, collection: [["Homme", "H"], ["Femme", "F"]], required: true %>
+
+    <!-- Ajout du champ only_same_gender avec un select -->
+    <small>Tirer au sort uniquement le même genre que moi</small>
+    <%= f.input :only_same_gender, as: :select, collection: [["Oui", true], ["Non", false]], required: true %>
+
+    <!-- Ajout du champ relation_type avec un select -->
+    <small>Certaines personnes peuvent être mal à l'aise concernant le fait d'offir à une personne par alliance.</small>
+    <small>Familiale</small>
+    <small>Alliance : exemple le mari de ma soeur ou la femme de mon frère</small>
+    <%= f.input :relation_type, as: :select, collection: [["Familiale", 0], ["Alliance", 1]], required: true %>
   </div>
 
   <div class="form-actions">
