--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,6 +2,6 @@
   <div class="footer-links">
   </div>
   <div class="footer-copyright">
-    Site fait avec ❤️ par Mohamed-Amine
+    Site fait avec ❤️ par Mohamed-Amine NEGHBEL
   </div>
 </div>
