--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
     </button>
 
    <%= link_to root_path, class: "navbar-brand text-center" do %>
-      <%= image_tag "logo", class: "avatar" %>
+      <%= image_tag "logo.svg", class: "avatar" %>
     <% end %>
     
 
