--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     </header>
     <main class="flex-grow-1 d-flex">
       
-      <div class="container my-auto">
+      <div class="w-100 align-content-center">
         <%= yield %>
       </div>
     </main>
