--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
                     {fetch_format: "auto"}
                   ], class: "img-fluid rounded-circle mx-auto d-block") %>
               <% else %>
-                <%= image_tag "https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?q=80&w=2034&auto=format&fit=crop", 
+                <%= image_tag "https://images.unsplash.com/photo-1601027847350-0285867c31f7?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", 
                   class: "img-fluid rounded-circle mx-auto d-block", width: 150, height: 150 %>
               <% end %>
 
@@ -43,7 +43,7 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-    <% if @draw.present? %>
+    <% if @draws.any? %>
       function launchConfetti() {
         var duration = 3 * 5000;
         var animationEnd = Date.now() + duration;
