--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,5 +1,5 @@
 {
-  "name": "AidSort",
+  "name": "Secret Aid",
   "icons": [
     {
       "src": "/icon.png",
@@ -16,7 +16,7 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "AidSort.",
-  "theme_color": "red",
-  "background_color": "red"
+  "description": "Secret Aid.",
+  "theme_color": "#4d795e",
+  "background_color": "#4d795e"
 }
